correçao de bug da funçao de validaçao de email corrigida

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "controller.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node controllerEmail.js"
+    "start": "node controllerEmail.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemailer": "^6.9.7"
+  }
 }
